fix: unnecessary title z-index removed

--- a/src/css/partials/sections/_categories.scss
+++ b/src/css/partials/sections/_categories.scss
@@ -7,7 +7,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 1;
-    z-index: 2;
 
     @media (min-width: 768px) {
       font-size: 32px;
