--- a/src/css/partials/sections/_rated.scss
+++ b/src/css/partials/sections/_rated.scss
@@ -8,7 +8,6 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 1;
-    z-index: 2;
 
     @media (min-width: 768px) {
       grid-column: 1 / 6;
